VPC-CNI安全组最佳实践/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080    # 节点端口（范围 30000-32767）
  type: NodePort
